# eastern-washington-digital-equity

./: .gitattributes  .gitignore  .readthedocs.yaml  Aptfile  Dockerfile  README.md  app.R  deploy.R  init.R  map.html  pyproject.toml  run.R  server.R  tempCodeRunnerFile.r  ui.R
.github/workflows/: lintr.yml
R/: Building Good_model.R  Forward Stepwise.R  PCA.R  get_census_data.R  get_geometry_data.R  library(psych).r  plot_index.R  principal_component.R  standardize_data.R
R/data/: data.xlsx
R/functions/: data_tables.R  database.R
R/modules/: analytics.R  database.R  database_credentials.R  insert_into_variables.R
R/scripts/: create_tables.ipynb  local_start.R
app/: app.py  census_test.ipynb  global.R  server.R  test.py  ui.R
app/Trevor/: test.r
app/data/: B01003 TOTAL POPULATION.csv  B28004.csv  B28004_clean.csv  (+74 more)
data/: .~lock.data.xlsx#  ACSST1Y2021.S2501-2022-10-13T214208.csv  ACSST5Y2018.S1101-2022-10-13T214104.csv  ACSST5Y2020.S2502-2022-10-13T214306.csv  ACSST5Y2020.S2503-2022-10-13T214340.csv  B19055 SOCIAL SECURITY INCOME IN THE PAST 12 MONTHS .xlsx  B28004 HOUSEHOLD INCOME IN THE LAST 12 MONTHS BY PRESENCE AND TYPE OF INTERNET SUBSCRIPTION IN HOUSEHOLD .xlsx  ECNBASIC2017.EC1731BASIC-2022-10-13T213632.csv  census_data.csv  combined_data.csv  combined_data_old.csv  county_info.csv  data.csv  data_dictionary.csv  final_index_data.csv  housing_occupancy.csv  internet_subscription.csv  nativity.csv  ookla.csv  presence_computer.csv  ratio_data.csv  test.html  test.ipynb  tract_code.csv  unique_providers.csv  z_score_data.csv
juliana/: test.R
notebooks/: add_internet_cost.ipynb  census.ipynb  census_python.ipynb  cluster.ipynb  combine_data.ipynb  combine_data_python.ipynb  data_test.ipynb  fcc.ipynb  fcc_data_python.ipynb  final_pca.ipynb  geometry.ipynb  juliana.ipynb  nicholas.ipynb  pc.ipynb  pc1.ipynb  pca3.ipynb  pca_method1.ipynb  pca_method1.slides.html  pca_method1_python.ipynb  pca_method2.html  pca_method2.ipynb  pca_method2.slides.html  pca_python.slides.html  pca_python1.ipynb  pca_python3.ipynb  pca_python4 copy.ipynb  pca_python4.ipynb  pca_test.ipynb  standardized_data.ipynb  tidycensus.ipynb
(+64 files in other folders)
