[tool.poetry]
name = "washington-digital-equity"
version = "0.1.0"
description = ""
authors = ["nicholas <nickptran@gmail.com>"]
readme = "README.md"
packages = [{include = "washington_digital_equity"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
dash = "^2.9.2"
plotly = "^5.14.0"
notebook = "^6.5.3"
ipykernel = "^6.22.0"
black = "^23.3.0"
dash-bootstrap-components = "^1.4.1"
dash-bootstrap-templates = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
